--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
             </div>
             <div class="flex flex-wrap w-1/2">
               <div class="md:p-2 p-1 w-full">
-                <img alt="gallery" class="MOGU" src="C:\Users\hp\Pictures\71aYx4938wL._AC_UF1000,1000_QL80_.jpg" style="width: 400px; height: 350px; border: 2PX solid black; position: relative; right: 700px;">
+                <img alt="gallery" class="MOGU" src="D:\SRT CODE\71aYx4938wL._AC_UF1000,1000_QL80_.jpg" style="width: 400px; height: 350px; border: 2PX solid black; position: relative; right: 700px;">
               </div>
               <div class="VEEBA">
-                <img  alt="gallery" class="w-full object-cover h-full object-center block" src="C:\Users\hp\Pictures\Eggless_Mayonnaise_Pouch_875g-01_750x810.webp" style="width: 400px; height: 350px; padding: 2px; border: 2px solid black; position: relative; bottom: 350px; ">
+                <img  alt="gallery" class="w-full object-cover h-full object-center block" src="D:\SRT CODE\Eggless_Mayonnaise_Pouch_875g-01_750x810.webp" style="width: 400px; height: 350px; padding: 2px; border: 2px solid black; position: relative; bottom: 350px; ">
                 <BR>
                 </BR>
               </div>
               <div class="IMGPIS">
-                <img alt="gallery" class="jbpeanut" src="C:\Users\hp\Pictures\peanuts-new-flavors-peanuts-285-in-1-29.png" style="padding-right: 2x; border: 2px solid black; position: relative; bottom: 300px;">
+                <img alt="gallery" class="jbpeanut" src="D:\SRT CODE\Pictures\peanuts-new-flavors-peanuts-285-in-1-29.png" style="padding-right: 2x; border: 2px solid black; position: relative; bottom: 300px;">
               </div>
             </div>
           </div>
