--- a/info.html
+++ b/info.html
@@ -17,7 +17,7 @@
     <H2>MOB NO- 7015689703</H2>
     <H2 style="font-family: 'Times New Roman', Times, serif;"> GSTIN NO- 06CQFPG2167R1ZE</H2>
     <H2 style="font-family: 'Times New Roman', Times, serif;"> EMAIL ID- shreeradheytraders342@gmail.com</H2>
-    <img src="D:\SRT CODE\Leonardo_Phoenix_Modern_professional_logo_design_featuring_a_s_2.jpg" alt="404" style="position: relative; height: 300px; width: 400px; left: 700px; bottom: 260px;">
+    <img src="D:SRT CODE\Leonardo_Phoenix_Modern_professional_logo_design_featuring_a_s_2.jpg" alt="404" style="position: relative; height: 300px; width: 400px; left: 700px; bottom: 260px;">
 
     
 </body>
